# tweet-feed-consume

./: .env  README  chatbot.ipynb  pyproject.toml  spacy-playground.ipynb  tweet_feed.py
data/: atis_utterances.txt
nootebooks/: twitter_data.ipynb
notebooks/: spacy-playground.ipynb  twitter_data.ipynb
notebooks/modules/: contractions.py
